--- a/cv.html
+++ b/cv.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header> 
-        <img src="./imagen/IMG_5799.jpg" alt="otraImagen">
+        <img src="./IMG_5799.jpg" alt="fotoJuliana">
         <section> 
             <h1>Juliana Estrada Isaza</h1>
             <h2>Diseñadora de modas</h2>
